<resources>
    <string name="app_name">Austin Allergy Alert</string>
    <string name="trace">Trace</string>
    <string name="low">Low</string>
    <string name="med">Med</string>
    <string name="high">High</string>
    <string name="v_high">V High</string>
    <string name="rate">Rate the severity of your symptoms:</string>
    <string name="save">Save</string>
    <string name="notes">Notes:</string>
    <string name="about_text">Austin Allergy Alert was created to let people in Austin, TX view daily allergy counts and record the severity of their allergy symptoms.
            \n\nAllergen counts are found at twitter.com/ATXPollen, and are only reported on weekdays.
            \n\nAllergens are divided into 4 groups: mold, grass, weed, and tree. Pet dander is not reported in this app.
            \n\nAn allergen\'s severity level is determined by its group.
            \n\nMold
                \n\tTrace: &lt;50
                \n\tLow: 51 - 300
                \n\tMed: 301 - 1,000
                \n\tHigh: 1,000 - 10,000
                \n\tV High: 10,001+
            \n\nGrass
                \n\tTrace: &lt;15
                \n\tLow: 16 - 50
                \n\tMed: 51 - 100
                \n\tHigh: 101 - 200
                \n\tV High: 201+
            \n\nWeed
                \n\tTrace: &lt;15
                \n\tLow: 16 - 50
                \n\tMed: 51 - 100
                \n\tHigh: 101 - 500
                \n\tV High: 501+
            \n\nTree
                \n\tTrace: &lt;15
                \n\tLow: 16 - 50
                \n\tMed: 51 - 100
                \n\tHigh: 101 - 1,500
                \n\tV High: 1,501+
    </string>
    <string name="your_notes">Your notes:</string>
    <string name="your_rating">Your rating:</string>
</resources>
